--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-  "singleQuote": true,
-  "trailingComma": "none",
-  "bracketSpacing": true,
-  "printWidth": 140,
-  "semi": false
+   "singleQuote": true,
+   "trailingComma": "none",
+   "bracketSpacing": true,
+   "printWidth": 140,
+   "semi": false,
+   "tabWidth": 2
 }
