upgrade @nestjs/core and update swc compiler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,6 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "strictNullChecks": true,
-    "strict": true,
-    "paths" : {
-        "@/*" : ["src/*"]
-    }
+    "strict": true
   }
 }
