--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "license": "LICENSED",
   "scripts": {
+    "dev": "nest start --watch",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "dev": "nest start --watch",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -22,14 +22,14 @@
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
     "@nestjs/cache-manager": "^2.1.0",
-    "@nestjs/common": "^10.1.0",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^10.0.1",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/swagger": "^6.1.4",
-    "@prisma/client": "^5.0.0",
+    "@nestjs/common": "^10.1.3",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.1.3",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
+    "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/swagger": "^7.1.8",
+    "@prisma/client": "^5.1.1",
     "@types/crypto-js": "^4.1.1",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
@@ -47,9 +47,11 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/cli": "^10.1.12",
+    "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^9.0.0",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.78",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
@@ -63,7 +65,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
-    "prisma": "^5.0.0",
+    "prisma": "^5.1.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
