--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@nestjs/swagger": "^7.1.8",
     "@prisma/client": "^5.1.1",
     "@types/crypto-js": "^4.1.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.1.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto-js": "^4.1.1",
+    "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
     "nestjs-zod": "^2.3.3",
     "passport": "^0.6.0",
