update controller to data-center and add multi columns

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,5 @@
     "titleBar.inactiveForeground": "#e7e7e799"
   },
   "peacock.color": "#215732",
-  "cSpell.words": ["apikey", "locationid"]
+  "cSpell.words": ["apikey", "DATACENTER", "locationid"]
 }
