--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.1.3",
     "@nestjs/swagger": "^7.1.8",
+    "@nestjs/terminus": "^10.0.1",
     "@prisma/client": "^5.1.1",
     "@types/crypto-js": "^4.1.1",
     "@types/jsonwebtoken": "^9.0.2",
