--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.1.7",
+    "camelcase": "^8.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto-js": "^4.1.1",
     "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "nestjs-zod": "^2.3.3",
     "passport": "^0.6.0",
@@ -83,6 +85,9 @@
       "json",
       "ts"
     ],
+    "moduleNameMapper": {
+      "^src/(.*)$": "<src>/$1"
+    },
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
